--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,44 +12,41 @@ jobs:
     permissions:
       contents: write
     steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          # Your GitHub token
+          # The following scopes are required:
+          #  - public_access (default scope)
+          # The following additional scopes may be required:
+          #  - read:org      (for organization related metrics)
+          #  - read:user     (for user related data)
+          #  - read:packages (for some packages related data)
+          #  - repo          (optional, if you want to include private repositories)
+          token: ${{ secrets.METRICS_TOKEN }}
 
-    name: With worldmap
-    uses: lowlighter/metrics@latest
-    with:
-      filename: metrics.plugin.stargazers.worldmap.svg
-      token: ${{ secrets.METRICS_TOKEN }}
-      base: ""
-      plugin_stargazers: yes
-      plugin_stargazers_charts: no
-      plugin_stargazers_worldmap: yes
-      plugin_stargazers_worldmap_token: ${{ secrets.GOOGLE_MAP_TOKEN }}
-      plugin_stargazers_worldmap_sample: 200
-
-    name: Half-year calendar
-    uses: lowlighter/metrics@latest
-    with:
-      filename: metrics.plugin.isocalendar.svg
-      token: ${{ secrets.METRICS_TOKEN }}
-      base: ""
-      plugin_isocalendar: yes
-
-    name: Icons
-    uses: lowlighter/metrics@latest
-      with:
-      filename: metrics.plugin.topics.icons.svg
-      token: NOT_NEEDED
-      base: ""
-      plugin_topics: yes
-      plugin_topics_limit: 0
-      plugin_topics_mode: icons
-
-    name: Recent activity
-    uses: lowlighter/metrics@latest
-    with:
-      filename: metrics.plugin.activity.svg
-      token: ${{ secrets.METRICS_TOKEN }}
-      base: ""
-      plugin_activity: yes
-      plugin_activity_limit: 5
-      plugin_activity_days: 0
-      plugin_activity_filter: issue, pr, release, fork, review, ref/create
+          # Options
+          user: horanmustaplot
+          template: classic
+          base: header, activity, community, repositories
+          config_timezone: Africa/Casablanca
+          plugin_activity: yes
+          plugin_activity_days: 14
+          plugin_activity_filter: all
+          plugin_activity_limit: 3
+          plugin_activity_load: 300
+          plugin_activity_visibility: all
+          plugin_languages: yes
+          plugin_languages_analysis_timeout: 15
+          plugin_languages_analysis_timeout_repositories: 7.5
+          plugin_languages_ignored: javascript
+          plugin_languages_categories: markup, programming
+          plugin_languages_colors: github
+          plugin_languages_limit: 6
+          plugin_languages_recent_categories: markup, programming
+          plugin_languages_recent_days: 14
+          plugin_languages_recent_load: 300
+          plugin_languages_sections: most-used
+          plugin_languages_threshold: 0%
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: half-year
+          config_order: isocalendar, base.header, languages, stars
