--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -50,3 +50,13 @@ jobs:
           plugin_isocalendar: yes
           plugin_isocalendar_duration: half-year
           config_order: isocalendar, base.header, languages, stars
+
+          name: Using graph charts
+uses: lowlighter/metrics@latest
+with:
+  filename: metrics.plugin.stargazers.graph.svg
+  token: ${{ secrets.METRICS_TOKEN }}
+  base: ""
+  plugin_stargazers: yes
+  plugin_stargazers_charts_type: graph
+
