--- a/.github/workflows/metrics.yml
+++ b/.github/workflows/metrics.yml
@@ -47,7 +47,6 @@ jobs:
           plugin_languages_sections: most-used
           plugin_languages_threshold: 0%
           plugin_isocalendar: yes
-          plugin_isocalendar_duration: half-year
-          plugin_topics: yes
-          config_order: isocalendar, base.header, languages, stars, topics
+          plugin_isocalendar_duration: full-year
+          config_order: isocalendar, base.header, languages, stars
           
