--- a/.github/workflows/tweets.yml
+++ b/.github/workflows/tweets.yml
@@ -1,9 +1,22 @@
-name: Latest tweets
-uses: lowlighter/metrics@latest
-with:
-  filename: metrics.plugin.tweets.svg
-  token: NOT_NEEDED
-  base: ""
-  plugin_tweets: yes
-  plugin_tweets_token: ${{ secrets.TWITTER_TOKEN }}
-  plugin_tweets_user: github
+# Visit https://github.com/lowlighter/metrics#-documentation for full reference
+name: Last chess game from lichess.org
+on:
+  # Schedule updates (each hour)
+  schedule: [{cron: "0 * * * *"}]
+  # Lines below let you run workflow manually and on each commit
+  workflow_dispatch:
+  push: {branches: ["master", "main"]}
+jobs:
+  github-metrics:
+    runs-on: nixos-24.05
+    permissions:
+      contents: write
+    steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.tweets.svg
+          token: NOT_NEEDED
+          base: ""
+          plugin_tweets: yes
+          plugin_tweets_token: ${{ secrets.TWITTER_TOKEN }}
+          plugin_tweets_user: github
