--- a/.github/workflows/tweets.yml
+++ b/.github/workflows/tweets.yml
@@ -1,5 +1,5 @@
 # Visit https://github.com/lowlighter/metrics#-documentation for full reference
-name: Last chess game from lichess.org
+name: Latest tweets
 on:
   # Schedule updates (each hour)
   schedule: [{cron: "0 * * * *"}]
