--- a/.github/workflows/stargazers.yml
+++ b/.github/workflows/stargazers.yml
@@ -1,11 +1,26 @@
 name: With worldmap
-uses: lowlighter/metrics@latest
-with:
-  filename: metrics.plugin.stargazers.worldmap.svg
-  token: ${{ secrets.METRICS_TOKEN }}
-  base: ""
-  plugin_stargazers: yes
-  plugin_stargazers_charts: no
-  plugin_stargazers_worldmap: yes
-  plugin_stargazers_worldmap_token: ${{ secrets.GOOGLE_MAP_TOKEN }}
-  plugin_stargazers_worldmap_sample: 200
+on:
+  # Schedule daily updates
+  schedule: [{cron: "0 0 * * *"}]
+  # (optional) Run workflow manually
+  workflow_dispatch:
+  # (optional) Run workflow when pushing on master/main
+  push: {branches: ["master", "main"]}
+jobs:
+  github-metrics:
+    runs-on: ubuntu-latest
+    environment: 
+      name: production
+    permissions:
+      contents: write
+    steps:
+      - uses: lowlighter/metrics@latest
+        with:
+          filename: metrics.plugin.stargazers.worldmap.svg
+          token: ${{ secrets.METRICS_TOKEN }}
+          base: ""
+          plugin_stargazers: yes
+          plugin_stargazers_charts: no
+          plugin_stargazers_worldmap: yes
+          plugin_stargazers_worldmap_token: ${{ secrets.GOOGLE_MAP_TOKEN }}
+          plugin_stargazers_worldmap_sample: 200
